# XiaoYi_Agent_Wifi_Router_MCP_test

./: QUICKSTART.md  README.md  USAGE_EXAMPLES.py  mcp_config_example.json  pyproject.toml  requirements.txt  run_fastapi_server.py  run_mcp_server.py  run_server.py  test_server.py
wifi_router_mcp/: __init__.py  server.py
wifi_router_rest/: __init__.py  server.py
wifi_router_shared/: __init__.py  router.py
