[project]
name = "wifi-router-mcp-server"
version = "0.1.0"
description = "MCP server simulating a WiFi router for home network management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.37.2",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wifi_router_mcp"]
